[package]
name = "graft-tracing"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
bs58 = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter", "parking_lot"] }
