[package]
name = "graft-tracing"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter", "parking_lot"] }
