[package]
name = "graft"
version = "0.2.0-rc.6"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

description = "The Graft storage engine."

[lints]
workspace = true

[dependencies]
assert_matches = { workspace = true }
async-stream = { workspace = true }
bilrost = { workspace = true, features = ["bytestring", "smallvec"] }
blake3 = { workspace = true }
bs58 = { workspace = true }
bytes = { workspace = true }
bytestring = { workspace = true }
circular-buffer = { workspace = true }
culprit = { workspace = true }
event-listener = { workspace = true }
fjall = { workspace = true }
foldhash = { workspace = true }
futures = { workspace = true }
hashbrown = { workspace = true }
itertools = { workspace = true }
lsm-tree = { workspace = true }
object_store = { workspace = true, features = ["aws"] }
parking_lot = { workspace = true }
precept = { workspace = true, features = ["antithesis"] }
rand = { workspace = true }
range-set-blaze = { workspace = true }
serde = { workspace = true, features = ["derive"] }
smallvec = { workspace = true }
splinter-rs = { workspace = true }
static_assertions = { workspace = true }
tempfile = { workspace = true }
text_trees = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "time", "parking_lot"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tryiter = { workspace = true }
xxhash-rust = { workspace = true }
zerocopy = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
graft-test = { path = "../graft-test" }
rand = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }

[features]
default = []
testutil = []
