[package]
name = "graft"
version = "0.2.1"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

description = "The Graft storage engine."

[lints]
workspace = true

[dependencies]
assert_matches = { workspace = true }
bilrost = { workspace = true, features = ["bytestring", "thin-vec"] }
blake3 = { workspace = true }
bs58 = { workspace = true }
bytes = { workspace = true }
bytestring = { workspace = true }
circular-buffer = { workspace = true }
fjall = { workspace = true }
foldhash = { workspace = true }
futures = { workspace = true }
hashbrown = { workspace = true }
itertools = { workspace = true }
opendal = { workspace = true }
parking_lot = { workspace = true }
precept = { workspace = true, optional = true }
rand = { workspace = true }
range-set-blaze = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
splinter-rs = { workspace = true }
static_assertions = { workspace = true }
tempfile = { workspace = true }
text_trees = { workspace = true }
thin-vec = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "time", "parking_lot"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tryiter = { workspace = true }
xxhash-rust = { workspace = true }
zerocopy = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
test-log = { workspace = true, features = ["trace"] }

[features]
default = []
testutil = []
precept = ["dep:precept"]
