[package]
name = "precept"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
rand = { workspace = true }
linkme = { workspace = true }
serde_json = { workspace = true }
libloading = { workspace = true, optional = true}
rustc_version_runtime = { workspace = true }

[features]
antithesis = ["libloading"]
