[package]
name = "precept"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
rand = { workspace = true }
linkme = { workspace = true }
serde_json = { workspace = true }
rustc_version_runtime = { workspace = true }

libloading = { workspace = true, optional = true}

[features]
# disable all runtime overhead of this crate
disabled = []

# enable the antithesis dispatcher
antithesis = ["libloading"]
