[package]
name = "precept"
version = "0.1.0"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
linkme = { workspace = true }
serde_json = { workspace = true }
rustc_version_runtime = { workspace = true }

libloading = { workspace = true, optional = true }

[features]
# disable all runtime overhead of this crate
disabled = []

# enable the antithesis dispatcher
antithesis = ["libloading"]
