[package]
name = "sqlite-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
log = { workspace = true}

[dev-dependencies]
rusqlite = { workspace = true, features = ["blob", "trace"] }

[build-dependencies]
bindgen = { workspace = true }

[features]
default = ["static"]
static = []
dynamic = []

[[example]]
name = "memvfs"
crate-type = ["cdylib"]
required-features = ["dynamic"]
