[package]
name = "sqlite-plugin"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["rlib"]

[dev-dependencies]
rusqlite = { workspace = true, features = ["blob", "trace"] }
log = { workspace = true }
parking_lot = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }

[features]
default = ["static"]
static = []
dynamic = []

[[example]]
name = "memvfs"
crate-type = ["cdylib"]
required-features = ["dynamic"]
