[package]
name = "sqlite-plugin"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["rlib"]

[dev-dependencies]
rusqlite = { workspace = true, features = ["blob", "trace", "bundled"] }
log = { workspace = true, features = ["std"] }
parking_lot = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }

[features]
static = []
dynamic = []

[[example]]
name = "memvfs"
crate-type = ["cdylib"]
required-features = ["dynamic"]
